generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id           String        @id @default(cuid())
  email        String        @unique
  password     String
  role         String        @default("user")
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  name         String?
  phone        String?
  address      String?
  area         String?
  governorate  String?
  appointments Appointment[]
  orders       Order[]
  pets         Pet[]
  hotelReservations HotelReservation[]
}

model Category {
  id        String    @id @default(cuid())
  name      String    @unique
  slug      String    @unique
  image     String?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  products  Product[]
}

model Product {
  id           String        @id @default(cuid())
  name         String
  slug         String        @unique
  description  String
  price        Float
  image        String
  stock        Int           @default(0)
  categoryId   String
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  orderItems   OrderItem[]
  category     Category      @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  productViews ProductView[]

  @@index([categoryId])
  @@index([slug])
  @@index([price])
  @@index([stock])
  @@index([createdAt])
  @@index([categoryId, price])
}

model Order {
  id              String      @id @default(cuid())
  customerName    String
  customerEmail   String
  customerPhone   String
  customerAddress String
  deliveryMethod  String
  total           Float
  status          String      @default("pending")
  notes           String?
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt
  paymentMethod   String      @default("cash")
  userId          String?
  user            User?       @relation(fields: [userId], references: [id])
  orderItems      OrderItem[]

  @@index([userId])
  @@index([status])
  @@index([createdAt])
  @@index([userId, createdAt])
  @@index([status, createdAt])
}

model OrderItem {
  id        String  @id @default(cuid())
  orderId   String
  productId String
  quantity  Int
  price     Float
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id])
}

model PageView {
  id        String   @id @default(cuid())
  page      String
  createdAt DateTime @default(now())
  sessionId String   @default("unknown")
}

model ProductView {
  id        String   @id @default(cuid())
  productId String
  createdAt DateTime @default(now())
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
}

model Pet {
  id                String         @id @default(cuid())
  userId            String
  petCode           String         @unique
  name              String
  species           String
  breed             String?
  gender            String
  birthDate         DateTime?
  color             String?
  photo             String?
  createdAt         DateTime       @default(now())
  updatedAt         DateTime       @updatedAt
  allergies         String?
  chronicConditions String?
  medicalHistory    String?
  medications       String?
  surgicalHistory   String?
  clinicVisits      ClinicVisit[]
  dewormings        Deworming[]
  user              User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  vaccinations      Vaccination[]
  weightHistory     WeightRecord[]
  hotelReservations HotelReservation[]
}

model Vaccination {
  id        String    @id @default(cuid())
  petId     String
  name      String
  date      DateTime
  nextDue   DateTime?
  notes     String?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  pet       Pet       @relation(fields: [petId], references: [id], onDelete: Cascade)
}

model Deworming {
  id        String    @id @default(cuid())
  petId     String
  name      String
  date      DateTime
  nextDue   DateTime?
  notes     String?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  pet       Pet       @relation(fields: [petId], references: [id], onDelete: Cascade)
}

model ClinicVisit {
  id              String    @id @default(cuid())
  petId           String
  visitDate       DateTime
  reason          String
  diagnosis       String?
  treatment       String?
  prescriptions   String?
  notes           String?
  nextAppointment DateTime?
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  pet             Pet       @relation(fields: [petId], references: [id], onDelete: Cascade)
}

model WeightRecord {
  id        String   @id @default(cuid())
  petId     String
  date      DateTime
  weight    Float
  notes     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  pet       Pet      @relation(fields: [petId], references: [id], onDelete: Cascade)
}

model Appointment {
  id                     String   @id @default(cuid())
  userId                 String?
  ownerName              String?
  ownerPhone             String?
  petId                  String?
  petName                String?
  appointmentDate        DateTime
  appointmentTime        String
  reason                 String
  status                 String   @default("upcoming")
  notes                  String?
  completionPrice        Float?
  completionPaymentMethod String?
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt
  user                   User?    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([status])
  @@index([appointmentDate])
  @@index([createdAt])
  @@index([userId, status])
  @@index([userId, appointmentDate])
  @@index([status, appointmentDate])
}

// Hotel management
enum RoomType {
  DOG
  CAT
  BIRD
}

enum RoomStatus {
  AVAILABLE
  OCCUPIED
  CLEANING
  MAINTENANCE
}

model HotelRoom {
  id         String      @id @default(cuid())
  roomNumber Int
  type       RoomType
  status     RoomStatus  @default(AVAILABLE)
  notes      String?
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  reservations HotelReservation[]

  @@unique([type, roomNumber])
  @@index([type, status])
}

model HotelReservation {
  id                  String    @id @default(cuid())
  roomId              String
  userId              String?
  ownerName           String
  ownerPhone          String
  petId               String?
  petName             String
  checkIn             DateTime
  checkOut            DateTime
  status              String    @default("booked")
  notes               String?
  pickup              Boolean   @default(false)
  dropoff             Boolean   @default(false)
  totalNights         Int?
  roomRate            Float?
  subtotal            Float?
  pickupFee           Float?
  dropoffFee          Float?
  extraServices       Json?
  total               Float?
  paymentMethod       String?
  checkedOutAt        DateTime?
  createdAt           DateTime  @default(now())
  updatedAt           DateTime  @updatedAt

  room                HotelRoom @relation(fields: [roomId], references: [id], onDelete: Cascade)
  user                User?     @relation(fields: [userId], references: [id])
  pet                 Pet?      @relation(fields: [petId], references: [id])

  @@index([roomId])
  @@index([userId])
  @@index([checkIn])
  @@index([checkOut])
  @@index([status])
}

model PetAdoption {
  id          String    @id @default(cuid())
  petName     String
  description String
  phoneNumber String
  area        String
  images      String    // JSON array of image URLs
  status      String    @default("active") // active, adopted, removed
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@index([status])
  @@index([createdAt])
  @@index([status, createdAt])
}
